The form elements were floating over the footer. increased the z-index of footer to address this issue

--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -107,6 +107,7 @@ html {
     bottom: 0;
     width: 100%;
     padding: 10px;
+    z-index: 10;
 }
 
 .osjs-login-error {
